fixed visibility issue conflict with nextra themes

--- a/packages/website/styles/utils.css
+++ b/packages/website/styles/utils.css
@@ -57,7 +57,7 @@
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
 
 /*Screenreader Only utility*/
